[tool.poetry]
name = "snowfall"
version = "0.1.0"
description = ""
authors = ["Chris Mitchell <cmitchell@bink.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
prefect = "^2.16.1"
prefect-dbt = "^0.4.1"
prefect-snowflake = "^0.27.3"
prefect-airbyte = "^0.3.2"
pandas = "<2.2"
snowflake-connector-python = { extras = ["pandas"], version = "^3.7.0" }
typer = { extras = ["all"], version = "^0.9.0" }
azure-identity = "^1.15.0"
azure-keyvault = "^4.2.0"
pydantic-settings = "^2.2.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.2"
black = "^23.7.0"
pytest = "^7.4.3"

[tool.ruff]
select = ["ALL"]
ignore = ["ANN101", "D407", "D413"]
line-length = 250

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
